--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ United States (English)</a>
         <div class="container">
             <div class="row mb-40">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-12 col-xl-12 ">
-                    <img class="mt-40 mx-auto d-block img-fluid" src="../images/child-care2.PNG" alt="">
+                    <img class="mt-40 mx-auto d-block img-fluid" src="./images/child-care2.PNG" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-12">
                     <p class="mt-40 text-center text-left">With ACN's Project Feeding Kids program, when you sign up for Anovia Payments through ACN, one meal will be donated to a child in need.</p>
