--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ United States (English)</a>
                 <div class="l-banner-position-sa col-12 col-sm-12 col-md-6">
                    <h1 class="mt-8 w-60">Simple and Affordable Payment Processing </h1>
                     <p class="mt-8 w-60 wdta-60">A one-stop shop designed to save you money - this is our guarantee!</p>
-                    <img height="47" class=" mb-40" src="./images/anovia-logo_payment.png" alt="">
+                    <img class="mb-40 img-85" src="../images/Anovia-Logo-Vertical_white.png" alt="">
                 </div>
             </div>
         </div>
