--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ United States (English)</a>
         <div class="row">
             <div>
                 <div class="col-md-6 col-sm-6 btn-position col-12 btn-center">
-                    <button type="button" class="major-white btn-shadow acn-btn-size btn rounded "><span class="">Shop Now</span></button>
+                    <button type="button" class="major-white btn-shadow acn-btn-size btn rounded mt--40"><span class="">Shop Now</span></button>
                 </div>
             </div>
         </div>
