--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ United States (English)</a>
     <div class="container">
         <div class="row">
             <div>
-                <div class="col-md-6 col-sm-6 btn-position col-12 btn-center mt--40">
+                <div class="col-md-6 col-sm-6 btn-position col-12 btn-center ">
                     <button type="button" class="major-white btn-shadow acn-btn-size btn rounded"><span class="">Shop Now</span></button>
                 </div>
             </div>
